# arbot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  backtester.py  check_db_symbols.py  config.json  config.py  debug_config_update.py  debug_env.py  debug_symbols_simple.py  debug_ticker_flow.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  run.py  setup.py  simple_test.py  simulator.py  strategy.py  test_fixed_symbols.py  test_gui_batch.py  test_strategy_callbacks.py  test_symbol_detection.py  test_volume_fix.py  trace_config.py  trader.py  ui.py
.github/workflows/: docs.yml
arbot/: __init__.py  backtester.py  config.py  database.py  gui.py  gui.py.backup  main.py  simulator.py  strategy.py  technical_indicators.py  trader.py  ui.py
arbot/exchanges/: __init__.py  base.py  binance.py  bitget.py  bybit.py  upbit.py
docker/: Dockerfile
docs/: configuration.md  index.md  installation.md  quickstart.md
docs/about/: changelog.md  license.md
docs/development/: contributing.md  docker.md  testing.md
docs/features/: arbitrage.md  core.md  exchanges.md  gui.md  risk.md
docs/guide/: moving-averages.md  quotes.md  settings.md  symbols.md  trading-modes.md  trend-filtering.md
docs/technical/: api.md  database.md  (+2 more)
exchanges/: okx.py
scripts/: debug_config.py  debug_tickers.py  trace_config_full.py
tests/: __init__.py  test_balance_display.py  test_balance_rate_limit.py  test_batch_storage.py  test_binance_ws.py  test_config.py  test_settings_popup.py  test_spreads_view.py  test_symbol_registration.py
